--- a/train.ipynb
+++ b/train.ipynb
@@ -75,36 +75,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "backbone = resnet_fpn_backbone('resnet50', True)\n",
     "backbone.out_channels = 256\n",
     "\n",
-    "model = Jde_RCNN(backbone, num_ID=trainset.nID)"
+    "model = Jde_RCNN(backbone, num_ID=100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "ValueError",
-     "evalue": "too many values to unpack (expected 2)",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-17-51058c666b54>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'layer %d is %s %d'\u001b[0m\u001b[0;34m%\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrequires_grad\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: too many values to unpack (expected 2)"
-     ]
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "layer 0 is body.conv1.weight 0\nlayer 1 is body.layer1.0.conv1.weight 0\nlayer 2 is body.layer1.0.conv2.weight 0\nlayer 3 is body.layer1.0.conv3.weight 0\nlayer 4 is body.layer1.0.downsample.0.weight 0\nlayer 5 is body.layer1.1.conv1.weight 0\nlayer 6 is body.layer1.1.conv2.weight 0\nlayer 7 is body.layer1.1.conv3.weight 0\nlayer 8 is body.layer1.2.conv1.weight 0\nlayer 9 is body.layer1.2.conv2.weight 0\nlayer 10 is body.layer1.2.conv3.weight 0\nlayer 11 is body.layer2.0.conv1.weight 1\nlayer 12 is body.layer2.0.conv2.weight 1\nlayer 13 is body.layer2.0.conv3.weight 1\nlayer 14 is body.layer2.0.downsample.0.weight 1\nlayer 15 is body.layer2.1.conv1.weight 1\nlayer 16 is body.layer2.1.conv2.weight 1\nlayer 17 is body.layer2.1.conv3.weight 1\nlayer 18 is body.layer2.2.conv1.weight 1\nlayer 19 is body.layer2.2.conv2.weight 1\nlayer 20 is body.layer2.2.conv3.weight 1\nlayer 21 is body.layer2.3.conv1.weight 1\nlayer 22 is body.layer2.3.conv2.weight 1\nlayer 23 is body.layer2.3.conv3.weight 1\nlayer 24 is body.layer3.0.conv1.weight 1\nlayer 25 is body.layer3.0.conv2.weight 1\nlayer 26 is body.layer3.0.conv3.weight 1\nlayer 27 is body.layer3.0.downsample.0.weight 1\nlayer 28 is body.layer3.1.conv1.weight 1\nlayer 29 is body.layer3.1.conv2.weight 1\nlayer 30 is body.layer3.1.conv3.weight 1\nlayer 31 is body.layer3.2.conv1.weight 1\nlayer 32 is body.layer3.2.conv2.weight 1\nlayer 33 is body.layer3.2.conv3.weight 1\nlayer 34 is body.layer3.3.conv1.weight 1\nlayer 35 is body.layer3.3.conv2.weight 1\nlayer 36 is body.layer3.3.conv3.weight 1\nlayer 37 is body.layer3.4.conv1.weight 1\nlayer 38 is body.layer3.4.conv2.weight 1\nlayer 39 is body.layer3.4.conv3.weight 1\nlayer 40 is body.layer3.5.conv1.weight 1\nlayer 41 is body.layer3.5.conv2.weight 1\nlayer 42 is body.layer3.5.conv3.weight 1\nlayer 43 is body.layer4.0.conv1.weight 1\nlayer 44 is body.layer4.0.conv2.weight 1\nlayer 45 is body.layer4.0.conv3.weight 1\nlayer 46 is body.layer4.0.downsample.0.weight 1\nlayer 47 is body.layer4.1.conv1.weight 1\nlayer 48 is body.layer4.1.conv2.weight 1\nlayer 49 is body.layer4.1.conv3.weight 1\nlayer 50 is body.layer4.2.conv1.weight 1\nlayer 51 is body.layer4.2.conv2.weight 1\nlayer 52 is body.layer4.2.conv3.weight 1\nlayer 53 is fpn.inner_blocks.0.weight 1\nlayer 54 is fpn.inner_blocks.0.bias 1\nlayer 55 is fpn.inner_blocks.1.weight 1\nlayer 56 is fpn.inner_blocks.1.bias 1\nlayer 57 is fpn.inner_blocks.2.weight 1\nlayer 58 is fpn.inner_blocks.2.bias 1\nlayer 59 is fpn.inner_blocks.3.weight 1\nlayer 60 is fpn.inner_blocks.3.bias 1\nlayer 61 is fpn.layer_blocks.0.weight 1\nlayer 62 is fpn.layer_blocks.0.bias 1\nlayer 63 is fpn.layer_blocks.1.weight 1\nlayer 64 is fpn.layer_blocks.1.bias 1\nlayer 65 is fpn.layer_blocks.2.weight 1\nlayer 66 is fpn.layer_blocks.2.bias 1\nlayer 67 is fpn.layer_blocks.3.weight 1\nlayer 68 is fpn.layer_blocks.3.bias 1\n"
     }
    ],
    "source": [
-    "for i, (name, p) in enumerate(model.named_parameters()):\n",
-    "    print('layer %d is %s %d'%(i, name, p.requires_grad))"
+    "for i, (name, p) in enumerate(model.backbone.named_parameters()):\n",
+    "    print('layer %d is %s %d'%(i, name, p.requires_grad))\n",
+    ""
    ]
   },
   {
@@ -121,7 +116,9 @@
      "execution_count": 16
     }
    ],
-   "source": []
+   "source": [
+    "torch.sum()"
+   ]
   },
   {
    "cell_type": "code",
