--- a/dataset.ipynb
+++ b/dataset.ipynb
@@ -447,12 +447,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "## delete images without bboxs\n",
-    "path = './data/CalTech.txt'\n",
+    "path = './data/cp_train.txt'\n",
     "root = '../'\n",
     "to = path.replace('data','data1')\n",
     "with open(path, 'r') as file:\n",
@@ -465,9 +465,7 @@
     "    for label_path in label_files:\n",
     "        labels = np.loadtxt(root+label_path, delimiter=',', dtype=np.float32)\n",
     "        if labels.shape[0]>0:\n",
-    "            file.write(label_path+'\\n')\n",
-    "\n",
-    ""
+    "            file.write(label_path+'\\n')"
    ]
   },
   {
