--- a/dataset.ipynb
+++ b/dataset.ipynb
@@ -80,7 +80,7 @@
     "path = './dataset/citypersons/labels/'\n",
     "for i in os.listdir(path):\n",
     "    for j in os.listdir(path+'/'+i):\n",
-    "        to_path = (path+'/'+i+'/'+j).replace('labels','labels_with_ids')\n",
+    "        to_path = (path+'/'+i+'/'+j).replace('labels','images')\n",
     "        if not os.path.exists(to_path):\n",
     "            os.makedirs(to_path)\n",
     "\n",
@@ -90,7 +90,7 @@
     "            json_path = (path+'/'+i+'/'+j+'/'+k)\n",
     "            f = open(json_path, encoding='utf-8')\n",
     "            data = json.load(f)\n",
-    "            txt_path = (path+'/'+i+'/'+j+'/'+k).replace('_gtBboxCityPersons.json','.txt').replace('labels','labels_with_ids')\n",
+    "            txt_path = (path+'/'+i+'/'+j+'/'+k).replace('_gtBboxCityPersons.json','.txt').replace('labels','images')\n",
     "            with open(txt_path, 'w+') as file:\n",
     "                for obj in data['objects']:\n",
     "                    if obj['instanceId']!=0:\n",
@@ -124,14 +124,14 @@
     "\n",
     "path = './dataset/ETH/images/'\n",
     "for i in os.listdir(path):\n",
-    "    txt_path = path.replace('images', 'labels_with_ids')+i\n",
+    "    txt_path = path.replace('images', 'images')+i\n",
     "    if not os.path.exists(txt_path):\n",
     "        os.makedirs(txt_path)\n",
     "    \n",
     "path = './dataset/ETH/label/'\n",
     "for i in os.listdir(path):\n",
     "    txt_path = path+i\n",
-    "    folder_path = txt_path.replace('label', 'labels_with_ids').rstrip('.txt')\n",
+    "    folder_path = txt_path.replace('label', 'images').rstrip('.txt')\n",
     "    with open(txt_path, 'r') as src:\n",
     "        label_files = src.readlines()\n",
     "        for n, label_file in enumerate(label_files):\n",
@@ -163,7 +163,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = './dataset/ETH/labels_with_ids/Linthescher/'\n",
+    "path = './dataset/ETH/images/Linthescher/'\n",
     "for f in os.listdir(path):\n",
     "    label = np.loadtxt(path+f, delimiter=',')\n",
     "    if len(label) < 1:\n",
@@ -257,7 +257,7 @@
     "## CalTech labels\n",
     "\n",
     "all_obj = 0\n",
-    "label_path = './dataset/CalTech/labels_with_ids/'\n",
+    "label_path = './dataset/CalTech/images/'\n",
     "for dname in sorted(glob.glob('./dataset/CT/annotations/set*')):\n",
     "    set_name = os.path.basename(dname)\n",
     "    for anno_fn in sorted(glob.glob('{}/*.vbb'.format(dname))):\n",
@@ -310,7 +310,7 @@
     "        label[label==id] = i\n",
     "    gt[:,1] = label\n",
     "    num_frames = np.unique(gt[:,0]).shape[0]\n",
-    "    current_path = path+'/labels_with_ids/'\n",
+    "    current_path = path+'/images/'\n",
     "    if not os.path.exists(current_path):\n",
     "        os.makedirs(current_path)\n",
     "    for i in range(num_frames):\n",
@@ -356,7 +356,7 @@
     "## CUHK labels\n",
     "\n",
     "all_obj = 0\n",
-    "label_path = './dataset/CUHK/labels_with_ids/'\n",
+    "label_path = './dataset/CUHK/images/'\n",
     "for anno_fn in os.listdir('./dataset/CUHK/gt/'):\n",
     "    vbb = loadmat('./dataset/CUHK/gt/'+anno_fn)\n",
     "    objLists = vbb['A'][0][0][1][0]\n",
@@ -392,7 +392,7 @@
     "# PRW\n",
     "\n",
     "src = '/mnt/d/Study/graduation_project/dataset/PRW/annotations/'\n",
-    "dst = './dataset/PRW/labels_with_ids/'\n",
+    "dst = './dataset/PRW/images/'\n",
     "if not os.path.exists(dst):\n",
     "    os.makedirs(dst)\n",
     "for i,basename in enumerate(os.listdir(src)):\n",
@@ -427,7 +427,7 @@
     "    img_files = [x.replace('\\n', '') for x in img_files]\n",
     "    img_files = list(filter(lambda x: len(x) > 0, img_files))\n",
     "\n",
-    "label_files = [x.replace('images', 'labels_with_ids').replace('.png', '.txt').replace('.jpg', '.txt')\n",
+    "label_files = [x.replace('images', 'images').replace('.png', '.txt').replace('.jpg', '.txt')\n",
     "                    for x in img_files]\n",
     "\n",
     "ids = []\n",
@@ -459,7 +459,7 @@
     "    img_files = file.readlines()\n",
     "    img_files = [x.replace('\\n', '') for x in img_files]\n",
     "    img_files = list(filter(lambda x: len(x) > 0, img_files))\n",
-    "label_files = [x.replace('images', 'labels_with_ids').replace('.png', '.txt').replace('.jpg', '.txt')\n",
+    "label_files = [x.replace('images', 'images').replace('.png', '.txt').replace('.jpg', '.txt')\n",
     "                    for x in img_files]\n",
     "with open(to ,'w+') as file:\n",
     "    for label_path in label_files:\n",
