--- a/train.ipynb
+++ b/train.ipynb
@@ -363,7 +363,7 @@
     "from utils.datasets import random_affine\n",
     "import numpy as np\n",
     "img_path = './dataset/ETH/images/Linthescher/image_00000930_0.png'\n",
-    "label_path = img_path.replace('images','labels_with_ids').replace('.png','.txt')\n",
+    "label_path = img_path.replace('images','images').replace('.png','.txt')\n",
     "img = cv2.imread(img_path)\n",
     "target = np.loadtxt(label_path, delimiter=',')\n",
     "print(target)\n",
