--- a/dataset.ipynb
+++ b/dataset.ipynb
@@ -25,7 +25,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,8 +38,7 @@
     "import fnmatch\n",
     "import shutil\n",
     "import glob\n",
-    "from scipy.io import loadmat\n",
-    ""
+    "from scipy.io import loadmat"
    ]
   },
   {
@@ -104,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "tags": [
      "outputPrepend",
@@ -124,7 +123,7 @@
     "\n",
     "path = './dataset/ETH/images/'\n",
     "for i in os.listdir(path):\n",
-    "    txt_path = path.replace('images', 'images')+i\n",
+    "    txt_path = path.replace('images', 'labels_with_ids')+i\n",
     "    if not os.path.exists(txt_path):\n",
     "        os.makedirs(txt_path)\n",
     "    \n",
@@ -136,13 +135,17 @@
     "        label_files = src.readlines()\n",
     "        for n, label_file in enumerate(label_files):\n",
     "            img_path = label_file[1:26].strip('left')\n",
-    "            cur_path = (folder_path + img_path).replace('.png', '.txt')\n",
+    "            cur_path = (folder_path + img_path).replace('.png', '.txt').replace('images', 'labels_with_ids')\n",
     "            if len(label_file)>29:\n",
     "                bboxs = label_file[29:].replace(');\\n', ')').split('), (')\n",
     "                bboxs = [bbox.strip('(').strip(')') for bbox in bboxs]\n",
     "                bboxs = [bbox.split(', ') for bbox in bboxs]\n",
     "                bboxs = np.array(bboxs, dtype=np.int64)\n",
-    "                bboxs = xyxy2xywh(bboxs)\n",
+    "                _bbox_ = bboxs.copy()\n",
+    "                bboxs[:,0] = (_bbox_[:,2]+_bbox_[:,0])/2\n",
+    "                bboxs[:,1] = (_bbox_[:,3]+_bbox_[:,1])/2\n",
+    "                bboxs[:,2] = np.abs(_bbox_[:,2]-_bbox_[:,0])\n",
+    "                bboxs[:,3] = np.abs(_bbox_[:,3]-_bbox_[:,1])\n",
     "                label = np.zeros((bboxs.shape[0],2))\n",
     "                label[:,0] = n\n",
     "                label[:,1] = -1\n",
@@ -155,6 +158,48 @@
     "    \n",
     "\n",
     ""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "array([[ 0.47680461, -0.11667414,  0.07473786,  0.24577711],\n       [ 0.1738679 ,  1.13729846,  0.65011279,  0.54732884],\n       [ 0.57958502, -1.96380267, -0.09778474, -1.39133935]])"
+     },
+     "metadata": {},
+     "execution_count": 7
+    }
+   ],
+   "source": [
+    "bbox = np.random.randn(3,4)\n",
+    "bbox"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "array([[ 0.07473786, -0.11667414,  0.40206675,  0.36245125],\n       [ 0.1738679 ,  0.54732884,  0.47624489,  0.58996961],\n       [-0.09778474, -1.96380267,  0.67736976,  0.57246333]])"
+     },
+     "metadata": {},
+     "execution_count": 8
+    }
+   ],
+   "source": [
+    "_bbox_ = bbox.copy()\n",
+    "bbox[:,0] = np.min(_bbox_[:,[0,2]], axis=1)\n",
+    "bbox[:,1] = np.min(_bbox_[:,[1,3]], axis=1)\n",
+    "bbox[:,2] = np.abs(_bbox_[:,2]-_bbox_[:,0])\n",
+    "bbox[:,3] = np.abs(_bbox_[:,3]-_bbox_[:,1])\n",
+    "bbox"
    ]
   },
   {
