--- a/dataset.ipynb
+++ b/dataset.ipynb
@@ -25,7 +25,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,19 +492,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "## delete images without bboxs\n",
-    "path = './data/cp_train.txt'\n",
+    "path = './data/cp_val.txt'\n",
     "root = '../'\n",
     "to = path.replace('data','data1')\n",
     "with open(path, 'r') as file:\n",
     "    img_files = file.readlines()\n",
     "    img_files = [x.replace('\\n', '') for x in img_files]\n",
     "    img_files = list(filter(lambda x: len(x) > 0, img_files))\n",
-    "label_files = [x.replace('images', 'images').replace('.png', '.txt').replace('.jpg', '.txt')\n",
+    "label_files = [x.replace('images', 'labels_with_ids').replace('.png', '.txt').replace('.jpg', '.txt')\n",
     "                    for x in img_files]\n",
     "with open(to ,'w+') as file:\n",
     "    for label_path in label_files:\n",
