--- a/train.ipynb
+++ b/train.ipynb
@@ -75,14 +75,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "backbone = resnet_fpn_backbone('resnet50', True)\n",
     "backbone.out_channels = 256\n",
     "\n",
-    "model = Jde_RCNN(backbone, num_ID=100)"
+    "model = Jde_RCNN(backbone, num_ID=trainset.nID)"
    ]
   },
   {
@@ -104,25 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "generator"
-     },
-     "metadata": {},
-     "execution_count": 16
-    }
-   ],
-   "source": [
-    "torch.sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,16 +122,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "{'loss_total': tensor([41.5569], grad_fn=<MulBackward0>),\n 'loss_classifier': tensor(0.7224, grad_fn=<NllLossBackward>),\n 'loss_box_reg': tensor(6.4457e-05, grad_fn=<DivBackward0>),\n 'loss_reid': tensor(4.8707, grad_fn=<NllLossBackward>),\n 'loss_objectness': tensor(0.6940, grad_fn=<BinaryCrossEntropyWithLogitsBackward>),\n 'loss_rpn_box_reg': tensor(1.3480, grad_fn=<DivBackward0>)}"
+      "text/plain": "{'loss_total': tensor([41.2775], grad_fn=<MulBackward0>),\n 'loss_classifier': tensor(0.7108, grad_fn=<NllLossBackward>),\n 'loss_box_reg': tensor(0.0002, grad_fn=<DivBackward0>),\n 'loss_reid': tensor(4.8866, grad_fn=<NllLossBackward>),\n 'loss_objectness': tensor(0.6925, grad_fn=<BinaryCrossEntropyWithLogitsBackward>),\n 'loss_rpn_box_reg': tensor(1.3074, grad_fn=<DivBackward0>)}"
      },
      "metadata": {},
-     "execution_count": 14
+     "execution_count": 7
     }
    ],
    "source": [
