--- a/train.ipynb
+++ b/train.ipynb
@@ -25,7 +25,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,6 +83,22 @@
     "backbone.out_channels = 256\n",
     "\n",
     "model = Jde_RCNN(backbone, num_ID=1129)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "s_c True\ns_r True\ns_id True\nbox_head.fc6.weight True\nbox_head.fc6.bias True\nbox_head.fc7.weight True\nbox_head.fc7.bias True\nbox_predictor.cls_score.weight True\nbox_predictor.cls_score.bias True\nbox_predictor.bbox_pred.weight True\nbox_predictor.bbox_pred.bias True\nbox_predictor.extract_embedding.weight True\nbox_predictor.extract_embedding.bias True\nidentifier.weight True\nidentifier.bias True\n"
+    }
+   ],
+   "source": [
+    "for i, (name, p) in enumerate(model.roi_heads.named_parameters()):\n",
+    "    print(name, p.requires_grad)"
    ]
   },
   {
